[iOS] Assert / crash trying to draw empty checked input https://bugs.webkit.org/show_bug.cgi?id=129138

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-02-20
Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/forms/checkbox-empty-size.html

* rendering/RenderThemeIOS.mm:
(WebCore::shortened):
Avoid a divide by 0, but checking for the condition upfront.

LayoutTests:

* fast/forms/checkbox-empty-size-expected.txt: Added.
* fast/forms/checkbox-empty-size.html: Added.

Canonical link: https://commits.webkit.org/147175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164467 268f45cc-cd09-0410-ab3c-d52691b4dbfc